<resources>

    <string name="app_name">test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create">Δημιουργία Πίνακα</string>
    <string name="drop">Διαγραφή Πίνακα</string>
    <string name="insert">Εισαγωγή Δεδομένων</string>
    <string name="delete">Διαγραφή Δεδομένων</string>
    <string name="counter">Σύνολο Εγγραφών</string>
    <string name="update">Ενημέρωση Δεδομένων</string>

</resources>